# library-management

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
books/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py
config/: settings.py  urls.py
users/: serializers.py  urls.py  views.py
